correccion estilo letra curso

--- a/cursos.html
+++ b/cursos.html
@@ -77,7 +77,7 @@
             <p class="curso__label">Precio: <span class="curso__info">Gratis</span></p>
             <p class="curso__info">Cupo: <span class="curso__info">20</span></p>
 
-            <p class="curso__label">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus quos alias nulla assumenda itaque et veniam necessitatibus sed, totam neque aliquid asperiores a eos similique.</p>
+            <p class="curso__info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus quos alias nulla assumenda itaque et veniam necessitatibus sed, totam neque aliquid asperiores a eos similique.</p>
             </div>
     
         </div><!--Cierre div curso-->
