--- a/contacto.html
+++ b/contacto.html
@@ -42,18 +42,18 @@
 
             <form class="formulario">
                     <div class="campo">
-                        <label for="nombre">Nombre</label>
-                        <input type="text" placeholder="Tu nombre" id="nombre">
+                        <label class="campo__label" for="nombre">Nombre</label>
+                        <input class="campo__field" type="text" placeholder="Tu nombre" id="nombre">
                     </div>
                    
                     <div class="campo">
-                        <label for="email">E-Mail</label>
-                        <input type="email" placeholder="Tu Email" id="email">
+                        <label class="campo__label" for="email">E-Mail</label>
+                        <input class="campo__field" type="email" placeholder="Tu Email" id="email">
                     </div>
 
                     <div class="campo">
-                        <label for="mensaje">Mensaje</label>
-                        <textarea id="mensaje"></textarea>
+                        <label class="campo__label" for="mensaje">Mensaje</label>
+                        <textarea class="campo__field campo__field--textarea" id="mensaje"></textarea>
                     </div>
 
                     <div class="campo">
