--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlogDeCafé</title>
-    <link rel="stylesheet" href="css/normalize.css">
+
+    <!-- PREFETCH-->
+    <link rel="prefetch" href="/nosotros.html" as="document"> <!-- Carga anticipadamente la pagina que continuaría el usuario para mejorar performance, mediante google analytics se puede verificar la página en donde el usuario pasa mas tiempo en navegacion -->
+
+    <!-- PRELOAD-->
+    <link rel="preload" href="/css/normalize.css" as="style"> <!--precarga elementos, necesarios inmediatamente-->
+    <link rel="stylesheet" href="/css/normalize.css">
+
+    <link rel="preload" href="/css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" crossorigin="crossorigin" as="font">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 </head>
 <body>
@@ -40,7 +51,10 @@
         <h3 class="no-margin">Nuestro Blog</h3>
         <article class="entrada">
             <div class="entrada__imagen">
-            <img src="/img/blog1.jpg" alt="imagen blog 1">
+                <picture>
+                    <source loading="lazy" srcset="/img/blog1.webp" type="image/webp"> <!--para optimizar img, se verifica si soporta formato mas liviano-->
+                    <img loading="lazy" src="/img/blog1.jpg" alt="imagen blog">
+                </picture>
             </div>
 
             <div class="entrada__contenido">
@@ -52,7 +66,10 @@
 
         <article class="entrada">
             <div class="entrada__imagen">
-            <img src="/img/blog2.jpg" alt="imagen blog 2">
+                <picture>
+                    <source loading="lazy" srcset="/img/blog2.webp" type="image/webp">
+                    <img loading="lazy" src="/img/blog2.jpg" alt="imagen blog">
+                </picture>
             </div>
 
             <div class="entrada__contenido">
@@ -64,7 +81,10 @@
 
         <article class="entrada">
             <div class="entrada__imagen">
-            <img src="/img/blog3.jpg" alt="imagen blog 3">
+                <picture>
+                    <source loading="lazy" srcset="/img/blog3.webp" type="image/webp">
+                    <img loading="lazy" src="/img/blog3.jpg" alt="imagen blog">
+                </picture>
             </div>
 
             <div class="entrada__contenido">
@@ -112,6 +132,7 @@
     </div>
 </footer>
 
+    <script src="/js/modernizr.js"></script>
 </body>
     
 </html>
