--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlogDeCafé</title>
+    <meta name="description" content="Página web de blog de café">
 
     <!-- PREFETCH-->
     <link rel="prefetch" href="/nosotros.html" as="document"> <!-- Carga anticipadamente la pagina que continuaría el usuario para mejorar performance, mediante google analytics se puede verificar la página en donde el usuario pasa mas tiempo en navegacion -->
@@ -103,14 +104,14 @@
         <h4 class="no-margin">Técnicas de extracción de café</h4>
         <p class="widget-curso__label">Precio: <span class="widget-curso__info">Gratis</span></p>
         <p class="widget-curso__label">Cupo: <span class="widget-curso__info">20</span></p>
-        <a href="entrada.html" class="boton boton--secundario">Más información</a>
+        <a href="entrada.html" class="boton boton--secundario">Más información sobre nuestros cursos</a>
         </li>
 
         <li class="widget-curso">
         <h4 class="no-margin">Cuatro recetas de café para principiantes</h4>
         <p class="widget-curso__label">Precio: <span class="widget-curso__info">Gratis</span></p>
         <p class="widget-curso__label">Cupo: <span class="widget-curso__info">20</span></p>
-        <a href="entrada.html" class="boton boton--secundario">Más información</a>
+        <a href="entrada.html" class="boton boton--secundario">Más información sobre nuestros cursos</a>
          </li>
 
     </ul>
